# temporary-team

./: .gitignore  README.md
backend/: environment.yaml  main.py  pyproject.toml  requirements.txt
backend/42 copy/: cache.db
backend/Models/: IssueModel.py  Task.py  Tasks.py
backend/geekathon/: main.py
fe/: package.json
fe/src/: App.tsx  Boilerplate.tsx  GenerateCode.tsx  Home.tsx  fetcher.tsx  index.tsx  types.ts  utils.tsx
fe/src/components/: BoilerplateItem.tsx  CodeItem.tsx  Context.tsx  DefineRepoModal.tsx  Issue.tsx  Issues.tsx  IssuesMenu.tsx  Modal.tsx  NavBar.tsx  Title.tsx  ValidationFeedback.tsx
fe/src/pages/: Boilerplate.tsx  GenerateCode.tsx  Home.tsx  NotFound.tsx
