[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["snobrega19 <s.nobrega@kigroup.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pygithub = "^2.1.1"
fastapi = "^0.104.1"
langchain = "^0.0.334"
python-dotenv = "^1.0.0"
pyautogen = "^0.1.14"
pymemgpt = "^0.2.1"
uvicorn = "^0.24.0.post1"
docker = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
